--- a/page3.html
+++ b/page3.html
@@ -165,6 +165,30 @@
                       <button class="button">Sign Up</button>
                   </a>
   </div>
+      <a id="back-to-top" href="#top">Back to Top</a>
+    <script>
+      // Add a script to show/hide the "Back to Top" button based on scrolling
+      window.onscroll = function() {
+          scrollFunction();
+      };
+
+      function scrollFunction() {
+          var backButton = document.getElementById("back-to-top");
+
+          // Display the button when scrolling down 20px from the top
+          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+              backButton.style.display = "block";
+          } else {
+              backButton.style.display = "none";
+          }
+      }
+
+      // Add a script to scroll to the top when the button is clicked
+      document.getElementById("back-to-top").onclick = function() {
+          document.body.scrollTop = 0;
+          document.documentElement.scrollTop = 0;
+      };
+  </script>
 
   </footer>
   
